--- a/static/styles.css
+++ b/static/styles.css
@@ -7,8 +7,13 @@
 	src: url('nillandRegular.ttf');
 }
 
+@font-face {
+	font-family: 'VarelaRound';
+	src: url('VarelaRound.ttf');
+}
+
 body {
-	font-family: 'century gothic', monospace;
+	font-family: 'VarelaRound', monospace;
 	font-size: 120%;
 	color: white;
 	margin: 0;
