stable: Move modules outside src directory.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,12 +1,46 @@
-/*******************
- Author: Dee Reddy (deesus@yandex.com)
- *******************/
+/*
+  Author: Dee Reddy (deesus@yandex.com)
+  */
+
 @import "resets",
         "flexgrid",
         "typography",
         "utility";
         // _media.scss (at end)
-// ==========================================================================
+
+$link-blue:   deepskyblue;
+$link-hover:  #0FA0CE;
+/* ========================================================================== */
+
+
+/*******************
+ Styles
+ *******************/
+// TODO: set defaults for link color, font-family, header font, sizes, etc.
+
+img {
+  /* image automatically resizes to max-width of the boundary: */
+  max-width: 100%;
+  height: auto;
+
+  // removes the extra space on bottom of a div that contains an image:
+  display: block;
+}
+
+a {
+  color: $link-blue; }
+a:hover {
+  color: $link-hover; }
+
+.thi {
+  color: red;
+}
+/*******************
+ Buttons
+ *******************/
+button, .button, input[type='button'], input[type='submit'], input[type='reset'] {
+
+}
 
 /**************
  Sticky Footer
@@ -22,31 +56,6 @@ body {
 #body-wrapper {
   @include flex(1);
 }
-
-/*******************
- Default Styles
- *******************/
-// TODO: set defaults for link color, font-family, header font, sizes, etc.
-
-img {
-  /* image automatically resizes to max-width of the boundary: */
-  max-width: 100%;
-  height: auto;
-
-  // removes the extra space on bottom of a div that contains an image:
-  display: block;
-}
-
-/*******************
- Buttons
- *******************/
-button, .button, input[type='button'], input[type='submit'], input[type='reset'] {
-
-}
-
-/*******************
- Menus
- *******************/
 
 /*******************
  Media queries
