stable: Begin developing pages

--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -2,8 +2,8 @@
  Typography:
  **************/
 html {
-  /* we use 10px = 1rem for easy calculations (e.g. 3rem = 30px) */
-  font-size: 10px;
+  /* 1rem = 10px for easy calculations (e.g. 3rem = 30px): */
+  font-size: 62.5%;
 }
 
 body {
