feat: Add fonts, skeleton's typography.

--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -1,3 +1,5 @@
+@import "fonts";
+
 /**************
  Typography:
  **************/
@@ -9,7 +11,7 @@ html {
 body {
   /* using `em` instead of `rem` in body b/c bug in chrome (use `rem` in all other areas) */
   font-size: 1.5em;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "OpenSans", Helvetica, Arial, sans-serif;
   color: #222;    /* NOT pure black */
   // TODO: specify:
   // line-height
@@ -21,14 +23,25 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 2rem;
+  margin-top:     0;
+  margin-bottom:  2rem;
+  font-weight:    300;
 }
 
-@for $i from 1 through 6 {
-  h#{$i} {
-    font-size: (8rem/$i * 1.5);
-    // TODO: specify:
-    // line-height
-    // letter-spacing
-  }
+// Use Skeleton's header typography:
+h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
+h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
+h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
+h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
+h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
+h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+  h1 { font-size: 5.0rem; }
+  h2 { font-size: 4.2rem; }
+  h3 { font-size: 3.6rem; }
+  h4 { font-size: 3.0rem; }
+  h5 { font-size: 2.4rem; }
+  h6 { font-size: 1.5rem; }
 }
