--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,28 +8,6 @@
         "utility";
         // _media.scss (at end)
 
-// TODO: replace with compass font-face mixin:
-@font-face {
-  font-family: 'OpenSans';
-  font-style:   normal;
-  font-weight:  400;
-  src:          url('../../public/assets/OpenSans-Regular.ttf');
-}
-
-@font-face {
-  font-family:  'OpenSans';
-  font-style:   normal;
-  font-weight:  300;
-  src:          url('../../public/assets/OpenSans-Light.ttf');
-}
-
-@font-face {
-  font-family:  'OpenSans';
-  font-style:   normal;
-  font-weight:  600;
-  src:          url('../../public/assets/OpenSans-Bold.ttf');
-}
-
 $link-blue:   deepskyblue;
 $link-hover:  #0FA0CE;
 /* ========================================================================== */
@@ -80,7 +58,13 @@ section {
 /*******************
  Portfolio
  *******************/
-
+.portfolio-tiles {
+  li {
+    background: white;
+    border-radius: 4px;
+    @include box-shadow(0 1px 3px 0 rgba(0, 0, 0, 0.2));
+  }
+}
 
 /**************
  Footer
