--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -328,6 +328,10 @@ img {
   display: block;
 }
 
+ul {
+  list-style: none;
+}
+
 a {
   color: deepskyblue;
 }
@@ -356,12 +360,22 @@ section {
 /*******************
  Portfolio
  *******************/
+#portfolio {
+  background-color: #fafafa;
+}
+
 .portfolio-tiles li {
+  display: inline-flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
   background: white;
   border-radius: 4px;
   -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  width: 30%;
+  padding: 1rem;
+  /* thablets: */
 }
 
 /**************
