--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -22,3 +22,15 @@
 @media all and (min-width : 1824px) {
   // add styles
 }
+
+
+
+/* Holy Grail Layout */
+@media screen and (max-width: 640px) {
+  // TODO: replace with selector
+  .place-holder {
+    @include flex-direction(column);
+    @include flexbox((box-orient: vertical));
+    order: 0;
+  }
+}
