--- a/src/sass/_utility.scss
+++ b/src/sass/_utility.scss
@@ -1,15 +1,27 @@
+/* removes both padding and margins */
 .no-pad, .no-padding {
-  padding: 0;
-  margin: 0;
+  padding:  0;
+  margin:   0;
 }
 
+/* use in '.row' if NOT nested in fluid */
 .no-fluid {
+  margin-left:  0;
+  margin-right: 0;
+}
+
+/* use if nested in fluid and want to clear */
+.clear-fluid {
   margin-left:  -2rem;
   margin-right: -2rem;
 }
 
+.full-height {
+  min-height: 100%;
+}
+
 .responsive, .margin-center {
-  margin-left: auto;
+  margin-left:  auto;
   margin-right: auto;
 }
 
