--- a/src/sass/_flexgrid.scss
+++ b/src/sass/_flexgrid.scss
@@ -16,7 +16,7 @@
 
 .row {
   @include display-flex;
-  @include flex(0 1 auto);  // shorthand for flex-grow, flex-shrink, flex-basis
+  @include flex(0 1 auto);
   @include flex-direction(row);
   @include flexbox((
           box-orient:     horizontal,
@@ -85,4 +85,3 @@
 }
 
 // TODO: add flex `align-self` property?
-
