--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -54,34 +54,40 @@ section {
 /*******************
  Home
  *******************/
-
-/*******************
- About
- *******************/
+#home {
+  order: 1;
+}
 
 /*******************
  Portfolio
  *******************/
 #portfolio {
-  background-color: rgb(250, 250, 250);
+  background: rgba(250, 250, 250, 1);
+  @include box-shadow(inset 0 2px 4px 0 rgba(210, 210, 210, .5));
 }
 
 .portfolio-tiles {
   li {
-    display: inline-flex;
+    display: inline;
     @include flex-direction(row);
 
-    background: white;
-    border-radius: 4px;
     @include box-shadow(0 1px 3px 0 rgba(0, 0, 0, 0.2));
     width: 30%;
     padding: 1rem;
+    background: white;
+    border-radius: 4px;
+
     /* thablets: */
     @media screen and (max-width: 550px) {
       
     }
   }
 }
+
+/*******************
+ About
+ *******************/
+
 
 /**************
  Footer
