--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -293,14 +293,26 @@ h6 {
     font-size: 1.5rem;
   }
 }
+/* removes both padding and margins */
 .no-pad, .no-padding {
   padding: 0;
   margin: 0;
 }
 
+/* use in '.row' if NOT nested in fluid */
 .no-fluid {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+/* use if nested in fluid and want to clear */
+.clear-fluid {
   margin-left: -2rem;
   margin-right: -2rem;
+}
+
+.full-height {
+  min-height: 100%;
 }
 
 .responsive, .margin-center {
@@ -354,30 +366,37 @@ section {
 /*******************
  Home
  *******************/
-/*******************
- About
- *******************/
+#home {
+  order: 1;
+}
+
 /*******************
  Portfolio
  *******************/
 #portfolio {
-  background-color: #fafafa;
+  background: #fafafa;
+  -moz-box-shadow: inset 0 2px 4px 0 rgba(210, 210, 210, 0.5);
+  -webkit-box-shadow: inset 0 2px 4px 0 rgba(210, 210, 210, 0.5);
+  box-shadow: inset 0 2px 4px 0 rgba(210, 210, 210, 0.5);
 }
 
 .portfolio-tiles li {
-  display: inline-flex;
+  display: inline;
   -webkit-flex-direction: row;
   flex-direction: row;
-  background: white;
-  border-radius: 4px;
   -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   width: 30%;
   padding: 1rem;
+  background: white;
+  border-radius: 4px;
   /* thablets: */
 }
 
+/*******************
+ About
+ *******************/
 /**************
  Footer
  **************/
@@ -408,3 +427,13 @@ footer {
 /* Tablets */
 /* Laptops/Desktops: */
 /* Large Screens: */
+/* Holy Grail Layout */
+@media screen and (max-width: 640px) {
+  .place-holder {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-orient: vertical;
+    box-orient: vertical;
+    order: 0;
+  }
+}
