--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,9 +8,9 @@
         "utility";
         // _media.scss (at end)
 
-$link-blue:   deepskyblue;
-$link-hover:  #0FA0CE;
-$latest-work: #dddddd;
+$link-blue:     deepskyblue;
+$link-hover:    #0FA0CE;
+$portfolio-hr:  #dddddd;
 /* ========================================================================== */
 
 
@@ -52,6 +52,13 @@ section {
   height: 100vh;
 }
 
+.title {
+  padding: 5rem 0 5rem 0;
+  @include flex-wrap(wrap);
+  @include align-items(center);
+}
+
+
 /*******************
  Home
  *******************/
@@ -65,6 +72,19 @@ section {
 #portfolio {
   background: rgba(250, 250, 250, 1);
   @include box-shadow(inset 0 2px 4px 0 rgba(210, 210, 210, .5));
+
+  hr {
+
+    color: $portfolio-hr;
+  }
+}
+
+.portfolio-tiles {
+  width: 74%;
+
+  img {
+    border-radius: 4px;
+  }
 }
 
 .portfolio-tiles > div {
