--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -72,29 +72,41 @@ section {
 #portfolio {
   background: rgba(250, 250, 250, 1);
   @include box-shadow(inset 0 2px 4px 0 rgba(210, 210, 210, .5));
-
-  hr {
-
-    color: $portfolio-hr;
-  }
 }
 
 .portfolio-tiles {
   width: 74%;
-
   img {
     border-radius: 4px;
   }
+
+
 }
 
-.portfolio-tiles > div {
+.portfolio-tiles > div, .portfolio-tiles > figure {
   @include box-shadow(0 1px 3px 0 rgba(0, 0, 0, 0.2));
+  @include transition(all 0.4s ease 0s);
   padding:        1rem;
   border-radius:  4px;
   background:     white;
-  /* thablets: */
-  @media screen and (max-width: 550px) {
-    /* styles */
+  font-weight:    200;
+
+  &:hover {
+    @include box-shadow(0 1px 3px 0 rgba(0, 0, 0, 0.4));
+  }
+
+  figcaption {
+    margin: 1rem 1.5rem 0.5rem;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    font-size:  1.7rem;
+    margin-bottom: 0.4rem;
+  }
+
+  p {
+    margin: 0;
+    color:  dimgray;
   }
 }
 
