--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -352,9 +352,7 @@ a:hover {
   color: #0FA0CE;
 }
 
-/*******************
- Buttons
- *******************/
+/* Buttons: */
 /* ==========================================================================
    Sections
    ========================================================================== */
