--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -73,15 +73,20 @@ section {
 }
 
 .portfolio-tiles {
+  border: 1px red dotted;
   width: 74%;
-  img {
-    border-radius: 4px;
-  }
-
-
+  @include display-flex;
+  @include flexbox((box-orient: horizontal));
+  @include justify-content(center);
+  @include align-items(center);
 }
 
 .portfolio-tiles > div, .portfolio-tiles > figure {
+  margin: auto;
+  /* we want a max of three tiles in a row (they start to resize) */
+  max-width: calc(100%/3);
+
+  border: 1px deepskyblue dotted;
   @include box-shadow(0 1px 3px 0 rgba(0, 0, 0, 0.2));
   @include transition(all 0.4s ease 0s);
   padding:        1rem;
@@ -105,6 +110,10 @@ section {
   p {
     margin: 0;
     color:  dimgray;
+  }
+
+  img {
+    border-radius: 4px;
   }
 }
 
