--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -22,13 +22,12 @@ html {
  **************/
 .container-fluid {
   box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
   padding-right: 2rem;
   padding-left: 2rem;
 }
 
 .row, .row-no-fluid {
+  box-sizing: border-box;
   display: -webkit-flex;
   display: flex;
   -webkit-flex: 0 1 auto;
@@ -190,6 +189,22 @@ html {
 .align-items-stretch {
   -webkit-align-items: stretch;
   align-items: stretch;
+}
+
+/* creates flexbox container horizontal direction */
+.flex-row {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+
+/* creates flexbox container vertical direction */
+.flex-column {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
 }
 
 @font-face {
@@ -456,7 +471,28 @@ body {
 }
 
 footer {
-  background: #c0c0c0;
+  -moz-box-shadow: inset 0 2px 4px 0 rgba(210, 210, 210, 0.5);
+  -webkit-box-shadow: inset 0 2px 4px 0 rgba(210, 210, 210, 0.5);
+  box-shadow: inset 0 2px 4px 0 rgba(210, 210, 210, 0.5);
+  min-height: 9rem;
+  background: whitesmoke;
+  color: #646464;
+}
+footer .row {
+  min-height: 100%;
+}
+footer a {
+  color: #646464;
+  -moz-transition: color 0.4s ease;
+  -o-transition: color 0.4s ease;
+  -webkit-transition: color 0.4s ease;
+  transition: color 0.4s ease;
+}
+footer a:hover {
+  color: black;
+}
+footer i {
+  font-size: 2.6rem;
 }
 
 /*******************
