--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -142,18 +142,18 @@ body {
 
 footer {
   @include box-shadow(inset 0 2px 4px 0 rgba(210, 210, 210, .5));
-  min-height: 9rem;
+  min-height: 8.5rem;
   background: $footer-bg;
-  color:      $gray;
+  color:      darkgray;
 
   .row {
     min-height: 100%;
   }
   a {
-    color:$gray;
     @include transition(color 0.4s ease);
+    color: darkgray;
     &:hover {
-      color: black;
+      color: $gray;
     }
   }
 
