--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -344,6 +344,10 @@ h6 {
   text-align: center;
 }
 
+.text-end {
+  text-align: end;
+}
+
 /* ========================================================================== */
 /* ==========================================================================
    Styles
@@ -474,22 +478,22 @@ footer {
   -moz-box-shadow: inset 0 2px 4px 0 rgba(210, 210, 210, 0.5);
   -webkit-box-shadow: inset 0 2px 4px 0 rgba(210, 210, 210, 0.5);
   box-shadow: inset 0 2px 4px 0 rgba(210, 210, 210, 0.5);
-  min-height: 9rem;
+  min-height: 8.5rem;
   background: whitesmoke;
-  color: #646464;
+  color: darkgray;
 }
 footer .row {
   min-height: 100%;
 }
 footer a {
-  color: #646464;
   -moz-transition: color 0.4s ease;
   -o-transition: color 0.4s ease;
   -webkit-transition: color 0.4s ease;
   transition: color 0.4s ease;
+  color: darkgray;
 }
 footer a:hover {
-  color: black;
+  color: #646464;
 }
 footer i {
   font-size: 2.6rem;
