--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -389,6 +389,31 @@ section {
 }
 
 /*******************
+ Header
+ *******************/
+header {
+  position: fixed;
+  width: 100%;
+  height: 7.5rem;
+  background: white;
+  border-bottom: 1px solid black;
+  -moz-transition: all 0.6s ease;
+  -o-transition: all 0.6s ease;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+}
+header nav {
+  height: 100%;
+}
+header button {
+  margin: 0 0.7rem;
+}
+header img {
+  max-height: 4rem;
+  width: auto;
+}
+
+/*******************
  Home
  *******************/
 #home {
