--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -46,16 +46,17 @@ a:hover {
 button, .button, input[type='button'], input[type='submit'], input[type='reset'] {
   background-color: transparent;
   display:          inline-block;
-  border-radius:    4px;
-  border:           1px solid #bbb;
   padding:          0.4rem 2.4rem;
   cursor:           pointer;
+  border-radius:    4px;
+  border:           1px solid rgba(35, 35, 35, 0);
+  @include          transition(all 0.5s ease);
 
   // TODO: set `line-height` and `letter-spacing`
-  @include          transition(all 0.5s ease);
+
   &:hover, &:focus {
-    border-color:   #222;
-    color: #333;
+    border:         1px solid rgba(35, 35, 35, 1);
+    color:          black;
   }
 }
 
