--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -375,18 +375,18 @@ a:hover {
 button, .button, input[type='button'], input[type='submit'], input[type='reset'] {
   background-color: transparent;
   display: inline-block;
-  border-radius: 4px;
-  border: 1px solid #bbb;
   padding: 0.4rem 2.4rem;
   cursor: pointer;
+  border-radius: 4px;
+  border: 1px solid rgba(35, 35, 35, 0);
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
 button:hover, button:focus, .button:hover, .button:focus, input[type='button']:hover, input[type='button']:focus, input[type='submit']:hover, input[type='submit']:focus, input[type='reset']:hover, input[type='reset']:focus {
-  border-color: #222;
-  color: #333;
+  border: 1px solid #232323;
+  color: black;
 }
 
 /* ==========================================================================
