--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,8 +14,9 @@ $portfolio-hr:  #dddddd;
 $footer-bg:     rgb(245, 245, 245);
 $gray:          rgb(100, 100, 100);
 
-$margin-tiles:  0.9%;
-$header-height: 7.5rem;
+$margin-tiles:      0.9%;
+$header-height:     7.5rem;
+$common-transition: all 0.5s ease;
 /* ========================================================================== */
 
 
@@ -50,7 +51,7 @@ button, .button, input[type='button'], input[type='submit'], input[type='reset']
   cursor:           pointer;
   border-radius:    4px;
   border:           1px solid rgba(35, 35, 35, 0);
-  @include          transition(all 0.5s ease);
+  @include          transition($common-transition);
 
   // TODO: set `line-height` and `letter-spacing`
 
@@ -83,7 +84,6 @@ header {
   height:         $header-height;
   background:     white;
   border-bottom:  1px solid black;
-  @include        transition(all 0.6s ease);
 
   nav {
     height: 100%;
@@ -96,6 +96,7 @@ header {
   img {
     max-height: 4rem;
     width:      auto;
+    @include    transition($common-transition);
   }
 }
 
