refactor: Change row, container, container-row semantics.

--- a/src/sass/_flexgrid.scss
+++ b/src/sass/_flexgrid.scss
@@ -4,15 +4,15 @@
 /**************
  Grid
  **************/
-.container-fluid {
+/* container differs from Bootstrap's `container-fluid` in that we don't use auto margins */
+.container {
   box-sizing: border-box;
   // needed to compensate for gutters when the rows wrap:
   padding-right:  2rem;
   padding-left:   2rem;
 }
 
-.row, .row-no-fluid {
-  box-sizing: border-box;
+.row, .container-row {
   @include display-flex;
   @include flex(0 1 auto);
   @include flex-direction(row);
@@ -21,14 +21,14 @@
           box-direction:  normal
   ));
   @include flex-wrap(wrap);
-  margin-left:  -1rem;
-  margin-right: -1rem;
-}
-
-/* use '.row-no-fluid' if NOT nested in container-fluid */
-.row-no-fluid {
   margin-left:  0;
   margin-right: 0;
+}
+
+/* use '.row' if NOT nested in '.container' otherwise use '.container-row' */
+.container-row {
+  margin-left:  -1rem;
+  margin-right: -1rem;
 }
 
 /* columns: */
