--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -20,14 +20,14 @@ html {
 /**************
  Grid
  **************/
-.container-fluid {
+/* container differs from Bootstrap's `container-fluid` in that we don't use auto margins */
+.container {
   box-sizing: border-box;
   padding-right: 2rem;
   padding-left: 2rem;
 }
 
-.row, .row-no-fluid {
-  box-sizing: border-box;
+.row, .container-row {
   display: -webkit-flex;
   display: flex;
   -webkit-flex: 0 1 auto;
@@ -40,14 +40,14 @@ html {
   box-direction: normal;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-left: -1rem;
-  margin-right: -1rem;
-}
-
-/* use '.row-no-fluid' if NOT nested in container-fluid */
-.row-no-fluid {
   margin-left: 0;
   margin-right: 0;
+}
+
+/* use '.row' if NOT nested in '.container' otherwise use '.container-row' */
+.container-row {
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 
 /* columns: */
