style: Clean src file. Add favicon.

--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -3,6 +3,8 @@
 /**************
  Typography:
  **************/
+$text-gray:  #54585E;
+
 html {
   /* 1rem = 10px for easy calculations (e.g. 3rem = 30px): */
   font-size: 62.5%;
@@ -10,11 +12,11 @@ html {
 
 body {
   /* using `em` instead of `rem` in body b/c bug in chrome (use `rem` in all other areas) */
-  font-size: 1.5em;
-  font-family: "OpenSans", Helvetica, Arial, sans-serif;
-  color: #222;    /* NOT pure black */
+  font-size:    1.5em;
+  font-family:  "OpenSans", Helvetica, Arial, sans-serif;
+  color:        $text-gray;
   // TODO: specify:
-  // line-height
+  line-height: 3.1rem;
 }
 
 a {
